# ensimag-shell

./: .gitignore  CMakeLists.txt  README.md
src/: ensishell.c  readcmd.c  readcmd.h  variante.h  variante.h.in
tests/: allShellTests.rb  testConstantes.rb  testForkExec.rb  testInOut.rb  testJobs.rb  testPrompt.rb  testshell.expect
tests/Perl/: README  allShellTests.pl
tests/Ruby/: testPrompt.rb
